Version 1.2 - The Accessibility Update
- Added an in-game display of controls under the TAB key.
-

Version 1.1 - The Language Update
- Added English translation and support for adding other translations.
- Replaced global save file with 3 save slots.
- Revamped the launcher.
- Added a way to exit the game by mashing escape.

Version 1.0 is finally here! The base game and all its core functions are ready to play!


---------------------------------------------------------------------------------------

Pre-1.0 changelogs:

0.106.5
- rename "src" to "game"
- rename "game_files" to "src"

0.106.4
- add version to launcher name
- remove some resolutions
- add executable
- update readme

0.106.3
- polish
- add option to reverse witch dialogue
- negate "-d" option in speedrun

0.106.2
- add and polish witch events

0.106.1
- swap zones 7, 8, 9

0.105
- add all remaining levels required for v1.0
- make "shrek" a preference
- change lift and portal sprites
- remove language setting from launcher (feature won't be in v1.0)

0.104.4
- move view constants away from globals.py

0.104.3
- fix level_tester.py, move it to scripts

0.104.2
- rename "game" folder to "src"

0.104.1
- finish levels for zones 4, 5, 6

0.103.4.1
- reverse "papor" change

0.103.4
- implement preferences (auto_reverse, timer, witch, cheats, papor) that persist between launches
- implement auto-setting best preferences for speedruns

0.103.3
- fix sprites to make them less crunchy

0.103.2
- add in-game messages for some commands
- add more levels to fill in some placeholders
- add more events
- change player sprite

0.103.1
- add particles to portals

0.102.5
- fix segment option horizontal flip

0.102.4
- fix segment probabilities

0.102.3
- add _hard_bridge_segments
- finish zone 201

0.102.2
- split segments into diffetent categories
- improve hard_5x5_segments

0.102.1
- fix rotation

0.101
- buff invisible blocks (0-0.02 from 0.01-0.05)
- add SISLG and block_silent_trigger

0.100.5