@@ -1,13 +1,13 @@
 8
 8
 1
-11121...
-31321111
-31E2...1
-..22.S11
-..22....
-..22....
-..22....
-..11....
+....2221
+....2122
+....2232
+....211.
+....21E.
+....212.
+....21S1
+....1231
 
 jumps 
