@@ -3,16 +3,16 @@
 1
 .e0e0e......e0e0e.
 .00000......00000.
-.e0000......0000e.
-.00000......00000.
+.e0............0e.
+.00............00.
 .e00000000000000e.
 .....0......0.....
 .....0......0.....
 .e00000000000000e.
+.00............00.
+.e0............0e.
 .00000......00000.
-.e0000......0000e.
-.00000......00000.
-.e0000......e0e0e.
+.0000e......e0e0e.
 ..................
 
 entrances 2/5 2/6 2/7   2/8 2/9 2/10
